<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- MAIN CONTENT -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <!-- SEARCH BAR -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@color/white">

                <EditText
                    android:id="@+id/editTextText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@drawable/rounded_edittext"
                    android:drawableStart="@android:drawable/ic_menu_search"
                    android:hint="@string/search"
                    android:inputType="text" />

                <ImageButton
                    android:id="@+id/imageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/todo"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/sort"
                    android:background="@android:color/transparent"/>

            </LinearLayout>

            <!-- RECYCLER SECTION -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#D3D3D3"
                android:clipToPadding="false"
                android:paddingStart="10dp"
                android:paddingTop="6dp"
                android:paddingEnd="10dp"
                android:paddingBottom="90dp" />

        </LinearLayout>

        <!-- EMPTY STATE -->
        <LinearLayout
            android:id="@+id/emptyView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:contentDescription="@string/todooo"
                android:src="@drawable/apk" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nothing_here_yet"
                android:textSize="16sp"
                android:textColor="#666666"
                android:layout_marginTop="10dp"/>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>